--- a/users/templates/users/wraps.html
+++ b/users/templates/users/wraps.html
@@ -240,6 +240,7 @@
             </li>
             <li><a href="{% url 'analysis' %}">{% trans 'LLM Analysis' %}</a></li>
             <li><a href="#">{% trans 'Past Wraps' %}</a></li>
+            <li><a href="{% url 'public_wraps' %}">{% trans 'Public Wraps' %}</a></li>
             <li><a href="{% url 'profile' %}">{% trans 'Profile' %}</a></li>
             <li><a href="{% url 'contact' %}">{% trans 'Contact' %}</a></li>
             <li><a href="{% url 'logout' %}">{% trans 'Logout' %}</a></li>
@@ -324,6 +325,7 @@
                 {% endif %}
 
                 <button onclick="deleteSpotifyData('{{ wrap.type }}', '{{ wrap.created_at|date:'c' }}')" class="delete-spotify-btn">Delete Wrapped</button>
+                <button onclick="publicSpotifyData('{{ wrap.type }}', '{{ wrap.created_at|date:'c' }}')" class="public-spotify-btn">Make Wrapped Public</button>
             </div>
         </div>
         {% endfor %}
@@ -384,8 +386,42 @@
                 alert('It was deleted successfully');
                 window.location.reload();
             } catch (error) {
-                console.error('Saving error:', error);
+                console.error('Delete error:', error);
                 alert('An error occurred while deleting data');
+            }
+        }
+        
+        async function publicSpotifyData(wrapperType, created_at) {
+            console.log("In Public Type: ", wrapperType)
+            console.log("In Public Time: ", created_at)
+            const csrfToken = getCookie('csrftoken');
+            
+            // Validate CSRF token before sending
+            if (!csrfToken) {
+                alert('CSRF token missing');
+                return;
+            }
+        
+            try {
+                const response = await fetch(`/{{ lang }}/handle-spotify-data/`, {
+                    method: 'POST',
+                    credentials: 'same-origin',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': csrfToken  // Ensure correct header name
+                    },
+                    body: JSON.stringify({
+                        wrapper_type: wrapperType,
+                        action: "publiced",
+                        created_at: created_at
+                    })
+                });
+                
+                alert('It was made public successfully');
+                window.location.reload();
+            } catch (error) {
+                console.error('Public error:', error);
+                alert('An error occurred while making public');
             }
         }
         
